[gd_scene load_steps=3 format=3 uid="uid://l3jdybyxt8h2"]

[ext_resource type="Script" uid="uid://737ileovxaj3" path="res://src/arm.gd" id="1_jnd2e"]
[ext_resource type="Texture2D" uid="uid://by76ikj5ngh0c" path="res://icon.svg" id="2_qavf4"]

[node name="arm" type="Node2D"]
script = ExtResource("1_jnd2e")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Marker2D"]
scale = Vector2(0.294798, 0.380531)
texture = ExtResource("2_qavf4")

[node name="Marker2D2" type="Marker2D" parent="Marker2D"]
position = Vector2(184, 128)

[node name="Sprite2D" type="Sprite2D" parent="Marker2D/Marker2D2"]
scale = Vector2(0.294798, 0.380531)
texture = ExtResource("2_qavf4")

[node name="Marker2D3" type="Marker2D" parent="Marker2D/Marker2D2"]
position = Vector2(168, -80)

[node name="Sprite2D" type="Sprite2D" parent="Marker2D/Marker2D2/Marker2D3"]
scale = Vector2(0.294798, 0.380531)
texture = ExtResource("2_qavf4")

[node name="Marker2D4" type="Marker2D" parent="Marker2D/Marker2D2/Marker2D3"]
position = Vector2(256, 104)

[node name="Sprite2D" type="Sprite2D" parent="Marker2D/Marker2D2/Marker2D3/Marker2D4"]
scale = Vector2(0.294798, 0.380531)
texture = ExtResource("2_qavf4")
